--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Ubicacion</title>
+<title>inicio</title>
 </head>
 <style type="text/css">
 body{
@@ -14,7 +14,7 @@ body{
 }
 #contenedor{
  width:1200px;
- height:1270px;
+ height:750px;
  margin-top:0px;
  margin-bottom:0px;
  margin-left:auto;
@@ -22,8 +22,8 @@ body{
  /*border: groove #3498DB;*/
 }
 #encabezado{
- width:100%;
- height:220px;
+ width: 100%;
+ height:215px;
 background-image: url(encb.png);
  background-color: black;
 /* border: thin groove #666;*/
@@ -94,7 +94,7 @@ background-image: url(encb.png);
  margin-top:15px;
  margin-bottom:15px;
  color: #663333;
- background-color: #000000;
+ background-color: #663300;
  /*border: thin groove #2C3E50;*/
 }
 #derecho{
@@ -129,8 +129,8 @@ margin-left:15px;
 
 }
 #menu li a:hover{
- background-color: #000000;
- color: #000000;
+ background-color: white;
+ color: #FFFFFF;
  text-decoration: underline;
 }
 .img-dos{
@@ -158,6 +158,9 @@ color:white;
 margin:2px;
 padding-top:4px;
 }
+ .Estilo1 {
+	color: #00FF00
+}
 .Estilo2 {color: #FFFFFF}
 </style>
 </head>
@@ -173,7 +176,8 @@ padding-top:4px;
  <div id="izquierdo">
  <ul id="menu">
 <ul id="menu">
-<li><a href="index.html">Inicio</a></li>  <li><a href="micion.html">Misión </a></li>
+<li><a href="index.html">Inicio</a></li>
+  <li><a href="micion.html">Misión </a></li>
  <li><a href="vicion.html">Vision </a></li>
   <li><a href="valores.html">valores</a></li>
  <li><a href="objetivo.html">Objetivos</a></li>
@@ -181,15 +185,24 @@ padding-top:4px;
     <li><a href="ubicacion.html">Ubicación </a></li>
 
  <div style="margin-left:20px;">
- <img src="direccion.png" width="350" height="250"/> </div>
+ <img src="f.png" width="350" height="250"/> </div>
 </ul>
 
-  </div>
- <div id="contenido">
- <h3 align="center">
- <span class="Estilo2">Ubicación</span>
- <hr class="amarillo show-for-medium-up" /> 
- <iframe src="https://www.google.com/maps/embed?pb=!4v1590197376734!6m8!1m7!1sS_ywUw5xO07c4z9R104V4A!2m2!1d19.08836808934479!2d-102.3517403469447!3f257.22119287752355!4f9.17163246110536!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> 
+ </div>
+ <div class="Estilo1" id="contenido">
+ <h3 align="center"> <marquee>
+   <span class="Estilo2">Inicio</span>  
+ </marquee></h3>
+ <h4 class="tex-dos" align="justify">
+<ul class="Estilo2">
+ Somos una empresa dedicada al café, y otros postres en común, dando lo mejor de nuestro servicio al cliente, haciendo que se baya con una gran experiencia en sabor, y atención
+</ul>
+    </h4>
+ </div>
+ <div id="derecho"><br/>
+ <img class="img-dos" src="t.png" width="350" height="150" align="left"/>
+ <img class="img-dos"  src="e.png" width="350" height="130" align="left"/>
+ <img class="img-dos" src="ooo.png" width="350" height="130" align="left"/> </div>
  <div id="pie">
  <div class="pie p">
  <h4 align="center" style=color=&quot;#373737&quot;>(c)2020.jenni torres cabriales<br/></h4>
@@ -200,34 +213,3 @@ padding-top:4px;
 </body>
 </html>
 
-<body>
-</body>
-</html>
-
-<body>
-</body>
-</html>
-
-<body>
-</body>
-</html>
-
-<body>
-</body>
-</html>
-
-<body>
-</body>
-</html>
-
-<body>
-</body>
-</html>
-
-<body>
-</body>
-</html>
-
-<body>
-</body>
-</html>
