--- a/valores.html
+++ b/valores.html
@@ -176,7 +176,7 @@ padding-top:4px;
  <div id="izquierdo">
  <ul id="menu">
 <ul id="menu">
-<li><a href="inicio.html">Inicio</a></li>
+<li><a href="index.html">Inicio</a></li>
   <li><a href="micion.html">Misión </a></li>
  <li><a href="vicion.html">Vision </a></li>
   <li><a href="valores.html">valores</a></li>
